work page modification

--- a/components/work.html
+++ b/components/work.html
@@ -1,30 +1,37 @@
 <div class="body-work__hero">
     <div class="body-work__hero__tag">
         <h1>Creating <span>BRANDS</span> that connect & inspire</h1>
-        <button id="logoButton" class="tertiary_btn"> 
+        <button id="logoButton" class="primary_btn"> 
             Logo
-            <img src="./assets/icons/expand-icon-colored.png" alt="">
+            <img src="./assets/icons/expand-icon.png" alt="">
         </button>
     </div>
     <img src="./assets/work/work-hero.png" alt="">
 </div>
+<h1 class="body-work-title">Skill-Building Projects</h1>
 <div class="body-work__system">
     <div class="body-work__system--img">
         <img src="./assets/work/web-system.png" alt="">
     </div>
     <div class="body-work__system--info">
-        <h3>AMS is a system designed to detect, monitor, and respond to accidents in real-time. 
-            The system tends to enhance safety by minimizing response times, improving situational 
-            awareness, and increasing the chance of saving people's lives.
+        <h3>ACCIDENT MONITORING SYSTEM</h3>
+        <h3>AMS detects, monitors, and responds to accidents in real-time to enhance 
+            safety by reducing response times and improving situational awareness.
         </h3>
         <h4>You can log in using the provided credentials as either a 
             user, who wears a device and is monitored by a benefactor, or as a benefactor, who monitors the user.
         </h4>
-        <h4 class="bold">Username:</h4>
-        <h4 class="font-style">guest_user<i class="fas fa-clone"></i></h4>
-        <h4 class="font-style">guest_benefactor<i class="fas fa-clone"></i></h4>
-        <h4 class="bold">Password:</h4>
-        <h4 class="font-style">Accidentm0nit0ring0621!<i class="fas fa-clone"></i></h4>
+        <div>
+            <div>
+                <h4 class="bold">Username:</h4>
+                <h4 class="font-style">guest_user<i class="fas fa-clone"></i></h4>
+                <h4 class="font-style">guest_benefactor<i class="fas fa-clone"></i></h4>
+            </div>
+            <div>
+                <h4 class="bold">Password:</h4>
+                <h4 class="font-style">Accidentm0nit0ring0621!<i class="fas fa-clone"></i></h4>
+            </div>
+        </div>
         <button id="amsWebsiteBtn" class="primary_btn">Go to Website</button>
         <button id="amsPrototypeBtn" class="primary_btn_outline">Go to Prototype</button>
     </div>
@@ -34,6 +41,7 @@
         <img src="./assets/work/mobile-system.png" alt="">
     </div>
     <div class="body-work__system--info">
+        <h3>CASH CARE</h3>
         <h3>Cash Care is a budget tracker designed to help you take charge of your finances
             with ease and confidence. It empowers you to monitor spending, set savings goals, 
             and achieve financial well-being by giving every peso a purpose.
@@ -45,11 +53,20 @@
     </div>
 </div>
 <div class="body-work__prototype">
-    <h1>Prototype</h1>
+<h1 class="body-work-title">Experimental Projects</h1>
     <div class="body-work__prototype--images">
-        <img src="./assets/work/card-prototype.png" data-page="omada">
-        <img src="./assets/work/food-galore-prototype.png" data-page="food-galore">
-        <img src="./assets/work/coffee-maker-prototype.png" data-page="coffee-maker">
+        <div>
+            <img src="./assets/work/card-prototype.png" data-page="omada">
+            <h3>Omada</h3>
+        </div>
+        <div>
+            <img src="./assets/work/food-galore-prototype.png" data-page="food-galore">
+            <h3>Food Galore</h3>
+        </div>
+        <div>
+            <img src="./assets/work/coffee-maker-prototype.png" data-page="coffee-maker">
+            <h3>Coffee Maker</h3>
+        </div>
     </div>
 </div>
 <div class="backdrop"></div>
