--- a/styles/food-galore/food-galore.scss
+++ b/styles/food-galore/food-galore.scss
@@ -6,7 +6,7 @@ body {
     align-items: center;
     margin: 0;
 
-    background: var(--secondary-color) !important;
+    background: var(--tertiary-color) !important;
 }
 
 .container {
