--- a/styles/home/home.scss
+++ b/styles/home/home.scss
@@ -80,6 +80,7 @@
                 color: #fff;
 
                 display: flex;
+                align-items: center;
                 gap: clamp(0.313rem, 0.028rem + 1.422vw, 0.938rem);
 
                 img {
