--- a/styles/chatbot/chatbot.css
+++ b/styles/chatbot/chatbot.css
@@ -12,6 +12,30 @@
   background: var(--primary-color);
 }
 
+.chatbot-getname {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  gap: 1rem;
+}
+.chatbot-getname-input {
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+  padding: 15px;
+  color: #fff;
+  font-weight: bolder;
+  font-size: 1rem;
+}
+.chatbot-getname-submit {
+  border: none;
+  background: transparent;
+  font-size: 1rem;
+  color: #fff;
+  cursor: pointer;
+}
+
 .chatbot-content {
   display: none;
   flex-direction: column;
