--- a/styles/chatbot/chatbot.css
+++ b/styles/chatbot/chatbot.css
@@ -3,13 +3,25 @@
 }
 
 .chatbot {
-  position: absolute;
-  top: 30vh;
+  display: none;
+  position: fixed;
+  top: 100vh;
   height: 70vh;
   width: 100%;
+  max-width: 20rem;
   padding: 1rem;
   border-radius: 20px 20px 0px 0px;
-  background: var(--primary-color);
+  background: var(--secondary-color);
+}
+.chatbot-draggable {
+  width: 100px;
+  height: 10px;
+  background: #e5e5e5;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 5px;
 }
 
 .chatbot-getname {
@@ -25,14 +37,23 @@
   background: transparent;
   padding: 15px;
   color: #fff;
-  font-weight: bolder;
   font-size: 1rem;
+  text-align: center;
+}
+.chatbot-getname-input::-moz-placeholder {
+  color: #fff;
+  opacity: 1;
+}
+.chatbot-getname-input::placeholder {
+  color: #fff;
+  opacity: 1;
 }
 .chatbot-getname-submit {
+  display: none;
   border: none;
   background: transparent;
   font-size: 1rem;
-  color: #fff;
+  color: var(--primary-color);
   cursor: pointer;
 }
 
