load entered name to the content

--- a/components/chatbot.html
+++ b/components/chatbot.html
@@ -6,7 +6,7 @@
 <div class="chatbot-content">
     <div class="chatbot-content-headline">
         <img src="./assets/chatbot.png">
-        <h3>Hello, how can I help you?</h3>
+        <h3>Hello <span class="chatbot-name"></span>, how can I help you?</h3>
     </div>
     <h4 class="chatbot-content-try">Try asking...</h4>
     <div class="chatbot-content-buttons"></div>
