--- a/components/header.html
+++ b/components/header.html
@@ -7,7 +7,7 @@
 </ul>
 <span class="header-overlay"></span>
 <div>
-    <button class="primary_btn_outline"> Let's Chat </button>
+    <button id="letsChat" class="primary_btn_outline"> Let's Chat </button>
     <div id="headerMenu" class="header-menu">
         <i class="fa-solid fa-bars"></i>
     </div>
