--- a/styles/chatbot/chatbot.css
+++ b/styles/chatbot/chatbot.css
@@ -6,12 +6,16 @@
   display: none;
   position: fixed;
   top: 100vh;
+  left: 50%;
+  transform: translate(-50%);
   height: 70vh;
   width: 100%;
   max-width: 20rem;
   padding: 1rem;
   border-radius: 20px 20px 0px 0px;
   background: var(--secondary-color);
+  border: 1px solid var(--tertiary-color);
+  box-shadow: -1px -1px 5px 0px var(--primary-color);
 }
 .chatbot-draggable {
   width: 100px;
@@ -125,6 +129,11 @@
   width: -moz-fit-content;
   width: fit-content;
   display: none;
+}
+
+.chatbot-name {
+  color: var(--accent-color);
+  font-weight: bold;
 }
 
 .question-selected {
