--- a/styles/chatbot/chatbot.scss
+++ b/styles/chatbot/chatbot.scss
@@ -6,6 +6,8 @@
     display: none;
     position: fixed;
     top: 100vh;
+    left: 50%;
+    transform: translate(-50%);
     height: 70vh;
 
     width: 100%;
@@ -13,6 +15,8 @@
     padding: 1rem;
     border-radius: 20px 20px 0px 0px;
     background: var(--secondary-color);
+    border: 1px solid var(--tertiary-color);
+    box-shadow: -1px -1px 5px 0px var(--primary-color);
     // background: linear-gradient(144.27deg, #EEEBDD 42.15%, #630000 140.78%);
 
     &-draggable {
@@ -134,6 +138,10 @@
         width: fit-content;
         display: none;
     }
+}
+.chatbot-name {
+    color: var(--accent-color);
+    font-weight: bold;
 }
 
 .question-selected {
