--- a/styles/chatbot/chatbot.css
+++ b/styles/chatbot/chatbot.css
@@ -10,17 +10,16 @@
   transform: translate(-50%);
   height: 70vh;
   width: 100%;
-  max-width: 20rem;
-  padding: 1rem;
+  max-width: 23rem;
   border-radius: 20px 20px 0px 0px;
-  background: var(--secondary-color);
+  background: #fff;
   border: 1px solid var(--tertiary-color);
   box-shadow: -1px -1px 5px 0px var(--primary-color);
 }
 .chatbot-draggable {
   width: 100px;
-  height: 10px;
-  background: #e5e5e5;
+  height: 5px;
+  background: #fff;
   position: absolute;
   top: 0;
   left: 50%;
@@ -34,22 +33,22 @@
   justify-content: center;
   height: 100%;
   gap: 1rem;
+  padding: 1rem;
 }
 .chatbot-getname-input {
   border: none;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid var(--primary-color);
   background: transparent;
   padding: 15px;
-  color: #fff;
   font-size: 1rem;
   text-align: center;
 }
 .chatbot-getname-input::-moz-placeholder {
-  color: #fff;
+  color: var(--primary-color);
   opacity: 1;
 }
 .chatbot-getname-input::placeholder {
-  color: #fff;
+  color: var(--primary-color);
   opacity: 1;
 }
 .chatbot-getname-submit {
@@ -59,6 +58,9 @@
   font-size: 1rem;
   color: var(--primary-color);
   cursor: pointer;
+}
+.chatbot-getname-submit:hover {
+  transform: scale(0.96);
 }
 
 .chatbot-content {
@@ -70,6 +72,10 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  background: var(--accent-color);
+  border-radius: 20px 20px 0px 0px;
+  border: 1px solid var(--tertiary-color);
+  padding: 1rem 0.5rem;
 }
 .chatbot-content-headline img {
   width: clamp(2rem, 0.323rem + 9.756vw, 5rem);
@@ -77,28 +83,29 @@
 .chatbot-content-headline h3 {
   color: #fff;
   font-weight: bold;
-  font-size: clamp(0.875rem, 0.704rem + 0.853vw, 1.25rem);
 }
 .chatbot-content-try {
   text-align: end;
-  color: #fff;
+  color: var(--primary-color);
+  padding-inline: 1rem;
 }
 .chatbot-content-buttons {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-inline: 1rem;
   transition: width 0.8s ease;
   height: -moz-fit-content;
   height: fit-content;
   max-height: 50vh;
-  overflow-y: scroll;
-  padding: 10px;
+  overflow-y: auto;
 }
 .chatbot-content-buttons-not-selected {
   display: none;
 }
 .chatbot-content-buttons-answer {
-  background-color: #fff;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
   box-shadow: 2px 2px 2px #fff;
   padding: 10px;
   border-radius: 10px;
@@ -114,17 +121,20 @@
   text-align: center;
 }
 .chatbot-content-buttons-questions-question {
-  color: #fff;
-  border: 1px solid #fff;
-  padding: 5px;
+  color: var(--primary-color);
+  border: 1px solid var(--secondary-color);
+  padding: 5px 10px;
   border-radius: 10px;
   font-size: 0.75rem;
   width: -moz-fit-content;
   width: fit-content;
+  cursor: pointer;
 }
 .chatbot-content-typing {
-  background-color: #fff;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
   padding: 10px;
+  margin-left: 1rem;
   border-radius: 10px;
   width: -moz-fit-content;
   width: fit-content;
@@ -132,7 +142,7 @@
 }
 
 .chatbot-name {
-  color: var(--accent-color);
+  color: var(--secondary-color);
   font-weight: bold;
 }
 
@@ -153,5 +163,14 @@
 .chatbot-ask-more, .chatbot-no-questions {
   text-align: center;
   padding-block-start: 2rem;
-  color: #fff;
+  color: var(--primary-color);
+}
+
+@media only screen and (min-width: 576px) {
+  .chatbot {
+    right: 3rem;
+    left: unset;
+    transform: translate(0);
+    max-width: clamp(23rem, 19.516rem + 9.677vw, 35rem);
+  }
 }/*# sourceMappingURL=chatbot.css.map */
