--- a/styles/chatbot/chatbot.scss
+++ b/styles/chatbot/chatbot.scss
@@ -11,18 +11,17 @@
     height: 70vh;
 
     width: 100%;
-    max-width: 20rem;
-    padding: 1rem;
+    max-width: 23rem;
     border-radius: 20px 20px 0px 0px;
-    background: var(--secondary-color);
+    background: #fff;
     border: 1px solid var(--tertiary-color);
     box-shadow: -1px -1px 5px 0px var(--primary-color);
     // background: linear-gradient(144.27deg, #EEEBDD 42.15%, #630000 140.78%);
 
     &-draggable {
         width: 100px;
-        height: 10px;
-        background: #e5e5e5;
+        height: 5px;
+        background: #fff;
         position: absolute;
         top: 0;
         left: 50%;
@@ -37,18 +36,18 @@
     justify-content: center;
     height: 100%;
     gap: 1rem;
+    padding: 1rem;
 
     &-input {
         border: none;
-        border-bottom: 1px solid #fff;
+        border-bottom: 1px solid var(--primary-color);
         background: transparent;
         padding: 15px;
-        color: #fff;
         font-size: 1rem;
         text-align: center;
 
         &::placeholder {
-            color: #fff;
+            color: var(--primary-color);
             opacity: 1;
         }
     }
@@ -60,6 +59,10 @@
         font-size: 1rem;
         color: var(--primary-color);
         cursor: pointer;
+
+        &:hover {
+            transform: scale(0.96);
+        }
     }
 }
 
@@ -73,6 +76,11 @@
         align-items: center;
         gap: 10px;
 
+        background: var(--accent-color);
+        border-radius: 20px 20px 0px 0px;
+        border: 1px solid var(--tertiary-color);
+        padding: 1rem 0.5rem; 
+
         img {
             width: clamp(2rem, 0.323rem + 9.756vw, 5rem);
         }
@@ -80,32 +88,33 @@
         h3 {
             color: #fff;
             font-weight: bold;
-            font-size: clamp(0.875rem, 0.704rem + 0.853vw, 1.25rem);
         }
     }
 
     &-try {
         text-align: end;
-        color: #fff;
+        color: var(--primary-color);
+        padding-inline: 1rem;
     }
 
     &-buttons {
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        padding-inline: 1rem;
 
         transition: width 0.8s ease;
         height: fit-content;
         max-height: 50vh;
-        overflow-y: scroll;
-        padding: 10px;
+        overflow-y: auto;
 
         &-not-selected {
             display: none;
         }
 
         &-answer {
-            background-color: #fff;
+            background-color: var(--secondary-color);
+            color: var(--primary-color);
             box-shadow: 2px 2px 2px #fff;
             padding: 10px;
             border-radius: 10px;
@@ -121,26 +130,29 @@
             text-align: center;
 
             &-question {
-                color: #fff;
-                border: 1px solid #fff;
-                padding: 5px;
+                color: var(--primary-color);
+                border: 1px solid var(--secondary-color);
+                padding: 5px 10px;
                 border-radius: 10px;
                 font-size: 0.75rem;
                 width: fit-content;
+                cursor: pointer;
             }
         }
     }
 
     &-typing {
-        background-color: #fff;
+        background-color: var(--secondary-color);
+        color: var(--primary-color);
         padding: 10px;
+        margin-left: 1rem;
         border-radius: 10px;
         width: fit-content;
         display: none;
     }
 }
 .chatbot-name {
-    color: var(--accent-color);
+    color: var(--secondary-color);
     font-weight: bold;
 }
 
@@ -160,5 +172,14 @@
 .chatbot-ask-more, .chatbot-no-questions {
     text-align: center;
     padding-block-start: 2rem;
-    color: #fff;
+    color: var(--primary-color);
+}
+
+@media only screen and (min-width: 576px) {
+    .chatbot {
+        right: 3rem;
+        left: unset;
+        transform: translate(0);
+        max-width: clamp(23rem, 19.516rem + 9.677vw, 35rem);
+    }
 }
