chatbot close button

--- a/components/chatbot.html
+++ b/components/chatbot.html
@@ -1,4 +1,7 @@
 <div class="chatbot-draggable"></div>
+<div class="chatbot-close">
+    <i class="fa-solid fa-xmark"></i>
+</div>
 <form class="chatbot-getname">
     <input type="text" class="chatbot-getname-input" placeholder="Enter Name or Company Name">
     <input type="button" class="chatbot-getname-submit" value="Submit">
@@ -6,7 +9,7 @@
 <div class="chatbot-content">
     <div class="chatbot-content-headline">
         <img src="./assets/chatbot.png">
-        <h3>Hello <span class="chatbot-name"></span>, how can I help you?</h3>
+        <h4>Hello <span class="chatbot-name"></span>, how can I help you?</h4>
     </div>
     <h4 class="chatbot-content-try">Try asking...</h4>
     <div class="chatbot-content-buttons"></div>
