minor styles changes

--- a/styles/work/work.scss
+++ b/styles/work/work.scss
@@ -7,6 +7,7 @@
         background-color: var(--tertiary-color);
         padding-inline: var(--margin-inline);
         position: relative;
+        z-index: -1;
         padding-block: clamp(6rem, 3.269rem + 13.656vw, 12rem) 16rem;;
 
         &__tag {
