--- a/styles/chatbot/chatbot.css
+++ b/styles/chatbot/chatbot.css
@@ -37,7 +37,7 @@
   border-radius: 50%;
   z-index: 100;
   cursor: pointer;
-  transition: transform 0.5s ease;
+  transition: transform 0.3s ease;
   transform: rotate(45deg);
 }
 .chatbot-close i {
@@ -118,6 +118,7 @@
   flex-direction: column;
   gap: 1rem;
   padding-inline: 1rem;
+  scrollbar-width: none;
   transition: width 0.8s ease;
   height: -moz-fit-content;
   height: fit-content;
