--- a/styles/chatbot/chatbot.scss
+++ b/styles/chatbot/chatbot.scss
@@ -40,7 +40,7 @@
         border-radius: 50%;
         z-index: 100;
         cursor: pointer;
-        transition: transform 0.5s ease;
+        transition: transform 0.3s ease;
         transform: rotate(45deg);
 
         i {
@@ -130,6 +130,7 @@
         flex-direction: column;
         gap: 1rem;
         padding-inline: 1rem;
+        scrollbar-width: none;
 
         transition: width 0.8s ease;
         height: fit-content;
