--- a/styles/header/header.scss
+++ b/styles/header/header.scss
@@ -86,6 +86,7 @@
         width: 100%;
         height: 100%;
         background-color: rgb(0, 0, 0, 0.7);
+        z-index: 1;
         display: none;
     }     
 
