modify questions + mere changes

--- a/components/work.html
+++ b/components/work.html
@@ -43,8 +43,7 @@
     <div class="body-work__system--info">
         <h3>CASH CARE</h3>
         <h3>Cash Care is a budget tracker designed to help you take charge of your finances
-            with ease and confidence. It empowers you to monitor spending, set savings goals, 
-            and achieve financial well-being by giving every peso a purpose.
+            with ease and confidence. 
         </h3>
         <h4>Navigate through the prototype by clicking buttons from 'Get Started', 
             menu tabs and tabs in Assets page.
