--- a/styles/work/work.scss
+++ b/styles/work/work.scss
@@ -89,6 +89,11 @@
             .font-style {
                 font-family: 'Times New Roman', Times, serif;
                 margin-right: 10px;
+
+                i {
+                    margin-left: 10px;
+                    cursor: pointer;
+                }
             }
 
             button {
@@ -128,9 +133,9 @@
                     transition: transform 0.3s ease, margin 0.3s ease;
   
                     &:hover {
-                        transform: scale(1.1);
-                        margin-top: -5rem;
-                        margin-bottom: 5rem;
+                        transform: scale(0.9);
+                        margin-top: -1rem;
+                        margin-bottom: 1rem;
                     }
                 }
             }
